[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "sw_mc_lib"
version = "0.2.1"
description = "Library for interaction with Stormworks Microcontrollers"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["stormworks", "lib", "microcontroller"]
license = {text = "MIT License"}
authors = [
    {name = "Fabian Wunsch"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.13"
]

[project.optional-dependencies]
dev = ["black", "isort", "pip-tools", "mypy", "flake8", "coverage", "pylint"]

[project.urls]
homepage = "https://github.com/stormworks-utils/sw_mc_lib"
repository = "https://github.com/stormworks-utils/sw_mc_lib"

[tool.setuptools]
packages = ["sw_mc_lib", "sw_mc_lib.Components", "sw_mc_lib.Components.SubTypes"]
