[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "sw_mc_lib"
version = "0.4.10"
description = "Library for interaction with Stormworks Microcontrollers"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["stormworks", "lib", "microcontroller"]
license = "MIT"
authors = [
    {name = "Fabian Wunsch"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = ["pillow>=11.0.0"]

[project.optional-dependencies]
dev = ["black", "isort", "pip-tools", "mypy", "flake8", "coverage", "pylint"]

[project.urls]
homepage = "https://github.com/stormworks-utils/sw_mc_lib"
repository = "https://github.com/stormworks-utils/sw_mc_lib"

[tool.setuptools]
packages = ["sw_mc_lib", "sw_mc_lib.Components"]
include-package-data = true

[tool.setuptools.package-data]
"sw_mc_lib" = ["py.typed", "blank_image.png"]
"sw_mc_lib.Components" = ["py.typed"]
